Removing units from database, including add food item route, and add them in index.html template for display only.

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,35 +47,35 @@
                                     <div class="cardContent">
                                         <div class="cardItem">
                                             <h4>Energy:</h4>
-                                            <p>{{ foodItem.energy1 }} / {{ foodItem.energy2 }}</p>
+                                            <p>{{ foodItem.energy1 }}kJ / {{ foodItem.energy2 }}kcal</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Fats:</h4>
-                                            <p>{{ foodItem.fat }}</p>
+                                            <p>{{ foodItem.fat }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Saturate:</h4>
-                                            <p>{{ foodItem.saturated }}</p>
+                                            <p>{{ foodItem.saturated }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Carbohydrates:</h4>
-                                            <p>{{ foodItem.carbohydrates }}</p>
+                                            <p>{{ foodItem.carbohydrates }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Sugar:</h4>
-                                            <p>{{ foodItem.sugar }}</p>
+                                            <p>{{ foodItem.sugar }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Fibre:</h4>
-                                            <p>{{ foodItem.fibre }}</p>
+                                            <p>{{ foodItem.fibre }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Protein:</h4>
-                                            <p>{{ foodItem.protein }}</p>
+                                            <p>{{ foodItem.protein }}g</p>
                                         </div>
                                         <div class="cardItem">
                                             <h4>Salt:</h4>
-                                            <p>{{ foodItem.salt }}</p>
+                                            <p>{{ foodItem.salt }}g</p>
                                         </div>
                                     </div>
                                     <div class="card-button">
