Pass data from Flask to crossfilter.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Merienda'); */
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Merienda');
 
+.hidden {
+    display: none;
+}
 
 .body {
     font-family: 'Montserrat', sans-serif;
