--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,14 @@
             stroke-width: 0;
         }
     </style> -->
+    <style>
+        .modal#displayModal {
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(195, 197, 195, 0.349);
+        }
+    
+    </style>
 </head>
 <body>
     
