--- a/templates/dashboard2.html
+++ b/templates/dashboard2.html
@@ -6,7 +6,7 @@
     <!-- {{ data.food_list }} -->
     <!-- <div class="btn btn-primary btn-sm" data-target="#displayModal" data-toggle="modal" onclick="fill()">Display</div> -->
 
-    <div class="modal" id="displayModal" tabindex="-1">
+    <div class="modal fade" id="displayModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
